<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
            android:textAlignment="center"
            android:layout_marginBottom="30sp"
            android:text="@string/login"
            android:textSize="40sp"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtLoginUser"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_user_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:textSize="20sp"
            android:id="@+id/txtLoginPassword"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:id="@+id/btnLogin"
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="login"/>

    <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_login"
            android:textSize="20sp"/>

        <TextView
                android:id="@+id/lblSign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorAccent"
                android:onClick="toSignUp"
                android:textSize="25sp"
                />
    </LinearLayout>



</LinearLayout>